# DevFlows

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .yamllint.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  lefthook.yml  pixi.toml  pyproject.toml  renovate.json5
.act/: push.json
.config/: .prettierignore  lefthook.yml  prettierrc.yaml  project.yaml  pytest.ini  renovate.json5  ruff.toml  yamllint.yaml  zizmor.yml
.dev/: pyproject.toml
.dev/harness/scenarios/: assert-file-exists.py  assert-result.py  assert-validation-failure.py  cleanup-ephemeral-branch.py  setup-ephemeral-writeback.py
.dev/scripts/: fmt-shell.sh  lint-shell.sh
.dev/src/devflows/: __init__.py  __main__.py  actions.py  catalog.py  cli.py  errors.py  propagation.py  publish.py  scenarios.py  yaml.py
.dev/src/devflows/schemas/: devflow.schema.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_workflow_proposal.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: _ci.yaml  _devcontainer.yaml  _docs.yaml  _release.yaml  _scenarios-anaconda-publish.local.yaml  _scenarios-anaconda-publish.yaml  _scenarios-binder-build.local.yaml  _scenarios-binder-build.yaml  _scenarios-deploy-pages.local.yaml  _scenarios-deploy-pages.yaml  _scenarios-devcontainer-build.yaml  _scenarios-devcontainer-run.local.yaml  _scenarios-devcontainer-run.yaml  _scenarios-docs-build.local.yaml  _scenarios-docs-build.yaml  _scenarios-pandoc.local.yaml  _scenarios-pandoc.yaml  _scenarios-paper-openjournals.local.yaml  _scenarios-paper-openjournals.yaml  _scenarios-pypi-publish.local.yaml  _scenarios-pypi-publish.yaml  _scenarios-python-build.local.yaml  _scenarios-python-build.yaml  _scenarios-python-lint.local.yaml  _scenarios-python-lint.yaml  _scenarios-python-test.local.yaml  _scenarios-python-test.yaml  _scenarios-writeback.yaml  _scenarios-zenodo-release.local.yaml  _scenarios-zenodo-release.yaml  anaconda-publish.yaml  binder-build.yaml  build-devcontainer.yaml  deploy-pages.yaml  devcontainer-build.yaml  devcontainer-run.yaml  devflows-ci.yaml  devflows-codeql.yaml  devflows-devcontainer.yaml  devflows-docs.yaml  (+26 more)
docs/: conf.py  index.md
docs/dev-guide/: adapter-and-action-pins.md  add-a-workflow.md  ci.md  cli-reference.md  documentation.md  environment.md  index.md  metadata.md  project-structure.md  publishing-conventions.md  release.md  testing.md  troubleshooting.md  workflow-lifecycle.md
docs/guides/: developer-guide.md  release-policy.md  testing.md  user-guide.md
docs/reference/: catalog.md
docs/user-guide/: artifacts-and-outputs.md  build-devcontainer.md  getting-started-docs-pages.md  getting-started-python.md  getting-started-research.md  index.md  pandoc.md  permissions-and-secrets.md  security-model.md  troubleshooting.md  using-workflows.md  versioning.md  writeback.md
harness/scenarios/: _ephemeral.py  assert-ephemeral-writeback.py  assert-file-exists.py  assert-result.py  cleanup-ephemeral-branch.py  create-setup-files.py  setup-ephemeral-writeback.py
scripts/: fmt-shell.sh  lint-shell.sh  move_major_tags.py
src/devflows/: actions.py  catalog.py  cli.py  docs.py  project.py  propagation.py  publish.py  scenarios.py  schema.py  yaml.py
tests/: conftest.py  test_actions.py  test_anaconda_publish.py  test_binder_build.py  test_build_devcontainer.py  test_catalog.py  test_cli.py  test_collect_job_outputs.py  test_contract.py  test_deploy_pages.py  test_devcontainer_build.py  test_devcontainer_run.py  test_docs.py  test_docs_build.py  test_ephemeral_harness.py  test_example_fixtures.py  test_harness_scripts.py  test_identity.py  test_internal_workflows.py  test_pandoc.py  test_paper_openjournals.py  test_propagation.py  test_publish.py  test_pypi_publish.py  test_python_build.py  test_python_lint.py  test_python_test.py  test_release.py  test_release_tags.py  test_scenarios.py  test_schema.py  test_writeback.py  test_zenodo_release.py
tests/harness/: test_ephemeral_harness.py  test_harness_scripts.py
tests/internal/: test_internal_workflows.py  test_release_tags.py  test_writeback.py
tests/package/: test_actions.py  test_collect_job_outputs.py  test_identity.py  test_project.py  test_propagation.py  test_publish.py  test_scenarios.py  test_schema.py  test_yaml.py
tests/scenarios/docs-build/mkdocs-uv/: mkdocs.yml  pyproject.toml
tests/scenarios/docs-build/mkdocs-uv/docs/: index.md
tests/scenarios/python-build/native-package/: pyproject.toml  setup.py
tests/scenarios/python-build/native-package/src/devflows_cext_fixture/: __init__.py  _speedup.c
tests/scenarios/python-build/pure-package/: README.md  pyproject.toml
tests/scenarios/python-build/pure-package/src/python_build_fixture/: __init__.py
tests/scenarios/python-test/pkg/: pyproject.toml
tests/scenarios/python-test/pkg/src/devflows_test_fixture/: __init__.py
tests/scenarios/python-test/pkg/tests/: test_fixture.py
tests/workflows/: test_anaconda_publish.py  test_binder_build.py  test_deploy_pages.py  test_devcontainer_run.py  test_paper_openjournals.py  test_python_build.py  test_python_lint.py  test_python_test.py  test_zenodo_release.py
workflows/anaconda-publish/: CHANGELOG.md  devflow.yaml  workflow.yaml
workflows/binder-build/: CHANGELOG.md  devflow.yaml  workflow.yaml
workflows/build-devcontainer/: CHANGELOG.md  devflow.yaml  workflow.yaml
workflows/deploy-pages/: CHANGELOG.md  devflow.yaml  workflow.yaml
workflows/devcontainer-build/: CHANGELOG.md  devflow.yaml  workflow.yaml
(+169 files in other folders)
