[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflows"
version = "0.1.0"
description = "Development tooling for reusable GitHub Actions workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
docs = [
  "myst-parser>=4.0",
  "pydata-sphinx-theme>=0.16",
  "sphinx>=8.0",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
devflows = "devflows.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devflows"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]
